app/assets/stylesheets/listdetail.css
/* Company Colours */ 

.formlabel {
  display: inline-block;
  max-width: 100%;
  margin-bottom: 5px;
  margin-top: 10px;
  font-weight: 400;
  font-size: 14px
}

.flash{
  margin-left: 50px;
}

.flash-error {
  background-color: #c0392b;
  color: white;
  padding: 10px;
  border-radius: 5px;
}

.flash-success {
  background-color: #27ae60;
  color: white;
  padding: 10px;
  border-radius: 5px;
}

.score {
  font-size: 12px;
  font-weight: 300;
}

.buzz {
  padding: 2px;
  padding-left: 100px;
  font-size: 24px;
  font-weight: 600;
  color: #979797;
}

.number {
  font-size: xxx-large;
  margin-left: -20px;
  margin-top: -3px;
  padding-left: 30px;
}
.container-fluid {
  margin-right: auto;
  margin-left: auto;
  padding-left: 0px;
  padding-right: 0px;
}

.overall{
  padding-top: 0px;
  /*background-color: white;*/
}

.overall.signup{
  margin-bottom: 10px;
  font-size: 24px;
  padding-bottom: 8px;
}

.uvote {
  font-size: 10px;
  line-height: 0;
  background-color: #7cda94;
  width: 15px;
  padding: 3px 0px;
  padding:5px 5px;
}

.dvote {
  font-size: 10px;
  line-height: 0;
  background-color: #d7552d;
  width: 15px;
  padding: 3px 0px;
  padding:5px 5px;
}

.up {
  background-color: #ffffff;
}

.up:hover {
  background: #cccccc;
  text-decoration: none;
    -webkit-transition:width .25s, height .25s, background-color .25s, -webkit-transform .25s;
    transition:width .25s, height .25s, background-color .25s, transform .25s;
}

.down:hover {
  background: #cccccc;
  text-decoration: none;
    -webkit-transition:width .25s, height .25s, background-color .25s, -webkit-transform .25s;
    transition:width .25s, height .25s, background-color .25s, transform .25s;
}

.down {
  background-color: #ffffff;
}

.tagbutton:hover{
  background: #0062ff;
  color: white;
}
.tagbutton {
  font-size: 12px;
  line-height: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 6px;
  padding-left: 6px;
  margin-right: 2px;
  background-color:#373737;
  color: #ffffff;
  border-radius: 0px;
    -webkit-transition:width .25s, height .25s, background-color .25s, -webkit-transform .25s;
    transition:width .25s, height .25s, background-color .25s, transform .25s;

}

.domain {
  font-size: 10px;
}

body {
  font-size: 12px;
  font-weight: 300;
}

ol {
  margin-top: 0;
  margin-bottom: 10px;
  padding-left: 0px

}

.comments_label{
  margin-right: 0px;
  margin-left: 0px;
  margin-top: 0px;
}

.btn-default.fetch {
margin-top: 20px;
}


.col-xs-1 {
/* width: 8.33333333%; */
margin-bottom: 8px;
}

.btn-default{
  padding:5px 5px;
}
.col-xs-9 {
  padding-right: 10px;
  padding-left: 0px;
  padding-top: 5px;
}

#username:hover{
  color: #0062ff;
}

#username {
  color: #373737;
}

/*
a:hover,
a:focus {
  color: green;
}
*/
.trade {
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
}


.navbar-default .navbar-nav > li > a:hover

#title:hover {
  color: #67b15e;
}
#title {
  color: #343434;
  font-weight: 400;
}

body{
  background-color: #ffffff;
}

h4 {
  margin-top: 0px;
  margin-bottom: 5px;
  font: black;
}

h6 {
  margin-top: 5px;
  margin-bottom: 5px;
}

.border {
    border-bottom: 1px solid #d2d5d4;
    padding-bottom: 5px;
    padding-top: 5px;
}

.pop{
  color: #373737;
}

.arrow-up {
  width: 0; 
  height: 0; 
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  
  border-bottom: 15px solid #27ae60;
}

.arrow-down {
  width: 0; 
  height: 0; 
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  
  border-top: 15px solid #c0392b;
}

html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 50px;
  background-color: black;
  border-top: black;
  border-width: thin;
  border-style: solid;
}

.footer .container{
  padding-top: 16px; 
  font-size: 16px;
}

#footer-color {
  color: #565656;
}

#footer-color:hover{
  color: #878787;
}

.page {
  background-color: #d3d4d5;
}

.page .a{
  color: #d3d4d5;
}

.morelink .btn .btn-default .page .a {
  color: black;
}

.byline {
  font-size: 16px;
}

.comment {
  margin-top: 10px;
}

ol.comments,
ol.search_results {
  padding: 0;
  list-style: none;
  margin: 0;
}

ol.comments {
  margin-left: 50px;
  margin-bottom: 0em;
  padding-left: 6px;
  line-height: 1.35em;
}

ol.comments.border{
  margin-top: 20px;
}
ol.comments1 {
  margin-left: 0;
  padding-left: 25px;
}
ol.comments.comments1 {
  border-left-color: transparent;
}

ol.comments.collapsed ol,
ol.comments.collapsed li {
  display: none;
}

